fixed git issue

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 											<li>Vector Calculus</li>
 											<li>Mathematical Reasoning</li>
 										</ul>
-										<p>In addition to my academics, I am a three-season NCAA Division III athlete, running Cross Country, Indoor Track and Field, and Outdoor Track and Field. I also am an avid musician, playing guitar for the Colby Jazz Band all semesters, and have 10 years experience playing guitar.</p><br />
+										<p>In addition to my academics, I am a three-season NCAA Division III athlete, running Cross Country, Indoor Track and Field, and Outdoor Track and Field. I am also an avid musician, playing guitar for the Colby Jazz Band all semesters, and have 10 years experience playing guitar.</p><br />
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
