--- a/jahnel.html
+++ b/jahnel.html
@@ -26,8 +26,18 @@
 							<section id="content" class="main">
 								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
 								<h2>Responsibilities and Accomplishments</h2>
-								<p>I developed a full-stack trivia application that is used by Jahnel Group employees in a collaborative, team based environment. My responsibilities included writing backend TypeScript code with Express.js to create API endpoints for seamless access to a NoSQL database. I configured DynamoDB tables to enable efficient querying of user information, past performance data, and thousands of trivia questions. On the frontend, I designed a user interface with React, incorporating interactive components, search features, and CSV compatibility for both trivia players and admins. Specifically, I enhanced the admin interface with components that display and allow editing of trivia questions. This project also provided me with valuable experience in using a repository for code sharing across multiple libraries and team members. Additionally, I gained exposure to the Agile software development process, participating in daily standups, iterative sprints, sprint planning sessions, and Kanban-style project management. I presented the application to Jahnel Group executives, receiving feedback and gauging their interest.</p>
-							</section>
+								<ul>
+									<li>Data Structures and Algorithms</li>
+									<li>Programming Languages</li>
+									<li>Data Analysis and Visualization</li>
+									<li>Algorithmic Game Theory</li>
+									<li>Linear Algebra</li>
+									<li>Mathematical Neuroscience</li>
+									<li>Multivariable Calculus</li>
+									<li>Vector Calculus</li>
+									<li>Mathematical Reasoning</li>
+								</ul>
+								</section>
 
 					</div>
 
