--- a/jahnel.html
+++ b/jahnel.html
@@ -21,21 +21,26 @@
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Content -->
 							<section id="content" class="main">
-								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
+								<span class="image main"><img src="images/work.jpg" alt="" /></span>
 								<h2>Responsibilities and Accomplishments</h2>
+								<p><a href="https://www.jahnelgroup.com/">Jahnel Group</a> is a software consulting company based in Schenectady, NY. During 
+								the summer of 2023, I spent the summer in Schenectady working as a Software Engineer Intern along with 10 others. Here is what I accomplished during my internship: </p>
 								<ul>
-									<li>Data Structures and Algorithms</li>
-									<li>Programming Languages</li>
-									<li>Data Analysis and Visualization</li>
-									<li>Algorithmic Game Theory</li>
-									<li>Linear Algebra</li>
-									<li>Mathematical Neuroscience</li>
-									<li>Multivariable Calculus</li>
-									<li>Vector Calculus</li>
-									<li>Mathematical Reasoning</li>
+									<li>The first 1-2 weeks were spent learning. We were given a course made by Jahnel Group employees that gave a broad overview of software development and current technologies. </li>
+									<li>My intern group was split into two teams and we were both assigned to create a full stack trivia web application given a specification document. The main goals included letting users play on a daily basis, let an admin view and assign questions for each day via a large question bank, and let users see past results and leaderboards among the user pool. </li>
+									<li>We were assigned to use the DERN stack (DynamoDB, Express.js, React.js, Node.js) and my team used TypeScript and TailwindCSS.</li>
+									<li>My main responsibilities for the first few weeks involved designing the DynamoDB schema and writing backend TypeScript code with Express.js to create API endpoints 
+										for seamless access into our DynamoDB table. During this time, I became very proficient with integrating DynamoDB into our code and designing effective routes that would best suit our needs later on.</li>
+									<li>Near the middle of the program, I joined the work on the frontend. My main tasks involved incorporating interactive components for CSV compatibility with the DynamoDB table. This provided an interface for the admin to insert and extract trivia questions via CSV files.</li>
+									<li>I also implemented search features for the table component that displayed trivia questions. This search bar also included filtering based on various trivia question attributes. </li>
+									<li>I contributed to deploying our application with AWS Amplify and AWS Lambda.</li>
+									<li>I created a SlackBot to send daily leaderboard statistics and reminders to play in Jahnel Group's company Slack group, deployed using AWS Lambda. </li>
+									<li>I gained a deep understanding of Git and using GitHub to share code across multiple team members. </li>
+									<li>I became familiarized with the Agile software development process, 
+										participating in daily standups, iterative sprints, sprint planning sessions, and Kanban-style project management.</li>
+									<li>I presented the application to Jahnel Group executives, receiving feedback and gauging their interest.</li>
 								</ul>
 								</section>
 
