fixed some text

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>About Me</h2>
+											<h2>Education</h2>
 										</header>
-										<p>I am a rising junior at Colby College double majoring in Computer Science and Mathematics. Some of the relevant courses I have taken include: </p>
+										<p>I am a rising junior at Colby College double majoring in Computer Science and Mathematics. I have a 3.71/4.0 GPA. Some of the relevant courses I have taken include: </p>
 										<ul>
 											<li>Data Structures and Algorithms</li>
 											<li>Programming Languages</li>
@@ -72,7 +72,9 @@
 											<li>Vector Calculus</li>
 											<li>Mathematical Reasoning</li>
 										</ul>
-										<p>In addition to my academics, I am a three-season NCAA Division III athlete, running Cross Country, Indoor Track and Field, and Outdoor Track and Field. I am also an avid musician, playing guitar for the Colby Jazz Band all semesters, and have 10 years experience playing guitar.</p><br />
+										<p>This next fall I will be taking Differential Equations, Abstract Algebra, and Computer Organization.</p>
+										<p>I graduated from Simsbury High School in 2022 with GPA of 4.425 and an SAT score of 1570.</p>
+										<p>In addition to my academics, I am a three-season NCAA Division III athlete, running Cross Country, Indoor Track and Field, and Outdoor Track and Field. I am also an avid musician, playing guitar for the Colby Jazz Band all semesters, and have over 10 years experience playing guitar.</p><br />
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
