--- a/spotify.html
+++ b/spotify.html
@@ -24,7 +24,7 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<!-- <span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
-								<p>I created a song guessing game web applicaiton utilizing React, Express.js, TailwindCSS, Spotify Web API, and hosted it on AWS using Amplify and Lambda. I often play a song guessing game with my family where a player gets one point for guessing the artist and another point for guessing the title. However, I always found it frustrating that one person would have to choose songs and not be able to participate in the game. My goal while creating this web app was to solve that problem and utilize the Spotify Web API to randomly select relevant songs so no one has to sit out and choose songs themselves.  </p>
+								<p>I created a song guessing game web application utilizing React, Express.js, TailwindCSS, Spotify Web API, and hosted it on AWS using Amplify and Lambda. I often play a song guessing game with my family where a player gets one point for guessing the artist and another point for guessing the title. However, I always found it frustrating that one person would have to choose songs and not be able to participate in the game. My goal while creating this web app was to solve that problem and utilize the Spotify Web API to randomly select relevant songs so no one has to sit out and choose songs themselves.  </p>
                                 <a href="https://main.d382c0ju8gqq8z.amplifyapp.com/">Link to Game</a><br/><a href="https://github.com/ldmcgo26/SongGame">Link to GitHub</a>
 							</section>
 
